fix spacing between questions turn debug mode off

--- a/app/static/css/output.css
+++ b/app/static/css/output.css
@@ -692,6 +692,10 @@ video {
   margin-bottom: 4rem;
 }
 
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
 .mb-3 {
   margin-bottom: 0.75rem;
 }
